tests/js_error/source_locations/statement/for_await/get_async_iterator_module.js
var iterable = {
  [Symbol.iterator]: function() {
    throw new Error();
  }
}

async function foo() {
  for await (var x of iterable) {}
}

await foo();